# docs/swagger.yaml
@@ -2,6 +2,9 @@ basePath: /api/v1
 definitions:
   models.Product:
     properties:
+      created_at:
+        description: Timestamp of creation
+        type: string
       description:
         description: Detailed description
         type: string
@@ -14,6 +17,15 @@ definitions:
       price:
         description: Price of the product
         type: number
+      quantity:
+        description: Quantity of the product
+        type: integer
+      sku:
+        description: Stock Keeping Unit
+        type: string
+      updated_at:
+        description: Timestamp of last update
+        type: string
     type: object
 host: localhost:8080
 info:
